[package]
name = "proc_macro_test"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.67"
syn = { version = "2.0.37", features = ["extra-traits"] }
quote = "1.0.8"
